Changelog for Uniplate

    Temporarily remove the Zipper module
    Change descendM to be applicative, not monadic
    Delete everything that was marked deprecated
1.6.12
    Allow compilation with clang
1.6.11
    Work around more excessive strictness, gives 10x speed improvement
1.6.10
    Allow hashable-1.2
    Work around excessive strictness in unordered-containers-0.2.3.0
1.6.9
    Remove dependencies on an old internal module
    More performance work (speculative)
1.6.8
    Significant speed up to default descend/descendM versions
    Implement faster descendM/descendBiM for the Data version
    Add RULES for the Direct method which follow plate identities
    Disallow unordered-containers 0.2.0.*
1.6.7
    Allow unordered-containers 0.2.*
1.6.6
    Require hashable-1.1.2.3, which has a TypeRep instance
1.6.5
    Add more instances for the Data.Instances, such as Ord/Eq
1.6.4
    Give better Data instances for the containers package
1.6.3
    #454, use unordered-containers on GHC 7.2 and above (faster)
1.6.2
    Given a Map/Set (or anything with NorepType) ignore it
    Add $UNIPLATE_VERBOSE to give messages about cache construction
1.6.1
    #435, mark things that were recommended not to use as deprecated
    #449, GHC 7.2 compatibility
1.6
    GHC 7 compatibility
    Eliminate mtl dependency
    Add transformer/transformBis, along with better documentation
    #364, add a zipper in Data.Generics.Uniplate.Zipper
    Add an Eq instance for Str
1.5.1
    Fix a typo in the synopsis
1.5
    Massive speed improvements to Data loading initial cache
1.4
    Add back performance enhancement for Rationals
1.3
    Rewrite, simplify, roll out Data.Generics.Uniplate.*
1.2
    Allow Data operations to work on Rational
1.1
    Add versions based on Str
1.0
    Initial release