@@ -2,8 +2,7 @@ import Data.Generics.Uniplate.Internal.Data
 import Data.Data
 
 instance Data a => Uniplate a where
-    uniplate = uniplateData $ fromOracle answer
-        where answer = hitTest (undefined :: a) (undefined :: a)
+    uniplate = flip descendM
 
     descend = descendData $ fromOracle answer
         where answer = hitTest (undefined :: a) (undefined :: a)
@@ -12,8 +11,7 @@ instance Data a => Uniplate a where
         where answer = hitTest (undefined :: a) (undefined :: a)
 
 instance (Data a, Data b, Uniplate b) => Biplate a b where
-    biplate = biplateData $ fromOracle answer
-        where answer = hitTest (undefined :: a) (undefined :: b)
+    biplate = flip descendBiM
 
     descendBi = descendBiData $ fromOracle answer
         where answer = hitTest (undefined :: a) (undefined :: b)
