@@ -1,5 +1,6 @@
 Changelog for Uniplate
 
+    Switch uniplate/biplate to being based on Applicative, not Str
     Temporarily remove the Zipper module
     Change descendM to be applicative, not monadic
     Delete everything that was marked deprecated
